--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,14 @@
     <string name="field_required">This field is required</string>
     <string name="action_sign_up">Sign up</string>
 
+    <!-- Strings related to user data Validation -->
+    <string name="email_validation">Please enter a valid email address (eg. john@hotmail.com).</string>
+    <string name="name_validation">What\'s your name?</string>
+    <string name="password_validation">Enter a combination of at least six numbers, letters and punctuation marks (like ! and ?).</string>
+
+
+    <!-- Strings related to user data Validation -->
+    <string name="sign_in_progress">Signing in...</string>
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="hello_world">Hello world!</string>
