--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,9 +37,34 @@
     <string name="password_validation">Enter a combination of at least six numbers, letters and punctuation marks (like ! and ?).</string>
 
 
-    <!-- Strings related to user data Validation -->
+    <!-- Strings related to user sign in -->
     <string name="sign_in_progress">Signing in...</string>
-<!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="sign_in_invalid">Invalid email/password combination</string>
+    <string name="sign_in_failed">Failed to sign in</string>
+
+    <!-- Strings related to user sign up -->
+    <string name="sign_up_progress">Signing up...</string>
+    <string name="sign_up_invalid">An account with this email already exists</string>
+    <string name="sign_up_failed">Failed to sign up</string>
+    <string name="sign_up_success">Account succesfully created, sign in</string>
+
+    <string name="image_dialog_picker_title">Select an image</string>
+    <string name="image_from_album">Choose photo from Album</string>
+    <string name="image_from_camera">Take photo</string>
+    <string name="remove_image">Remove</string>
+
+    <string name="delete_positive_text">Yes</string>
+    <string name="delete_negative_text">Cancel</string>
+    <string name="delete_location_dialog_message">Are you sure you want to delete this location</string>
+
+    <string-array name="image_dialog_picker_items">
+        <item>@string/image_from_camera</item>
+        <item>@string/image_from_album</item>
+    </string-array>
+
+    <string-array name="image_dialog_picker_items_extended">
+        <item>@string/image_from_camera</item>
+        <item>@string/image_from_album</item>
+        <item>@string/remove_image</item>
+    </string-array>
 </resources>
